--- a/taptargetview/build.gradle
+++ b/taptargetview/build.gradle
@@ -17,9 +17,9 @@ android {
 }
 
 dependencies {
-    api "com.android.support:support-annotations:$defSupportLibraryVersion"
-    api "com.android.support:appcompat-v7:$defSupportLibraryVersion"
-    implementation "com.android.support:support-compat:$defSupportLibraryVersion"
+    compile "com.android.support:support-annotations:$defSupportLibraryVersion"
+    compile "com.android.support:appcompat-v7:$defSupportLibraryVersion"
+    compile "com.android.support:support-compat:$defSupportLibraryVersion"
 }
 
 install {
